--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
   <header class="site-header">
     <a class="brand" href="index.html">
-      <img src="assets/logo.svg" alt="EXPAND ロゴ" class="logo">
+      <img src="assets/logo.png" alt="EXPAND ロゴ" class="logo">
       <span class="brand-text">EXPAND</span>
     </a>
     <nav class="nav">
