--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
   <footer class="site-footer">
     <div class="footer-inner">
       <div class="foot-brand">
-        <img src="assets/logo.svg" alt="" class="logo small">
+        <img src="assets/logo.png" alt="" class="logo small">
         <span>EXPAND Co., Ltd.</span>
       </div>
       <div class="foot-links">
