--- a/index.html
+++ b/index.html
@@ -35,6 +35,62 @@
       </div>
     </div>
   </section>
+<section class="strengths">
+  <h2>EXPANDの強み</h2>
+
+  <div class="strength-box">
+    <h3>1. 実行に強いコンサルティング</h3>
+    <p>
+      戦略を考えるだけでなく、実行し、結果が出るまで伴走します。<br>
+      机上の空論ではなく、現場で成果を出すことを大切にしています。
+    </p>
+  </div>
+
+  <div class="strength-box">
+    <h3>2. テクノロジー活用力</h3>
+    <p>
+      CRM・AI・業務自動化などのテクノロジーを活用し、<br>
+      企業の生産性と売上の最大化をサポートします。
+    </p>
+  </div>
+
+  <div class="strength-box">
+    <h3>3. 学習する組織の構築</h3>
+    <p>
+      人材は企業の最大の財産。<br>
+      教育・育成・仕組み化によって、<br>
+      「自走できる組織」をつくります。
+    </p>
+  </div>
+
+  <div class="strength-box">
+    <h3>4. 課題の本質を見抜く力</h3>
+    <p>
+      表面的な問題ではなく、根本原因を見極め、<br>
+      本質から解決策を設計します。
+    </p>
+  </div>
+
+  <div class="strength-box">
+    <h3>5. スピードと柔軟性</h3>
+    <p>
+      少数精鋭のチームだからこそできる、<br>
+      素早く柔軟な対応と深い伴走支援。
+    </p>
+  </div>
+
+  <div class="strength-box">
+    <h3>6. 幅広い対応領域</h3>
+    <p>
+      営業支援・マーケティング・DX・人材育成・Web制作など、<br>
+      事業を横断して支援できるのが強みです。
+    </p>
+  </div>
+
+  <p class="strength-message">
+    <strong>EXPAND は「確かな未来を創るパートナー」です。</strong>
+  </p>
+</section>
 
   <section class="features section">
     <h2>提供価値</h2>
