--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>株式会社EXPAND | 人とテクノロジーで未来を拓く</title>
   <meta name="description" content="株式会社EXPANDは、人とテクノロジーの力で挑戦を実行に変え、確かな未来を共創します。営業支援、業務改善、教育、マーケティングまでワンストップで支援。">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/styles.css?v=3">
   <meta property="og:title" content="株式会社EXPAND | 人とテクノロジーで未来を拓く">
   <meta property="og:description" content="挑戦に寄り添い実行し、確かな未来を実現します。">
   <meta property="og:type" content="website">
