--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <section class="hero">
     <div class="hero-inner">
-      <h1>未来は、待つものではなく、創るもの。</h1>
+      <h1>未来は待つものではなく創るもの。</h1>
       <p class="lead">人が本気で動くとき、　テクノロジーはその力を何倍にもする。<br>私たちは、　挑戦に寄り添い実行し、　確かな未来を実現します。</p>
       <div class="hero-ctas">
         <a href="about.html" class="btn">会社概要</a>
