--- a/index.html
+++ b/index.html
@@ -115,7 +115,15 @@
   <section class="services section">
     <h2>サービス</h2>
     <ul class="service-list">
-      <li><span>営業支援 ・ CRM/MA 構築</span></li>
+      <div class="service-list">
+  <a href="service-crm.html" class="service-card">
+    <h3>営業支援・CRM / MA構築</h3>
+    <p>顧客情報の一元管理と営業プロセスの可視化で、売上の最大化をサポートします。</p>
+  </a>
+
+  <!-- 2つ目以降は、あとでDX・教育・Web用に同じように書き換える -->
+</div>
+
       <li><span>業務設計 ・ DX 推進</span></li>
       <li><span>教育 ・ 人材育成プログラム</span></li>
       <li><span>Web制作 ・ マーケティング支援</span></li>
