--- a/index.html
+++ b/index.html
@@ -120,13 +120,11 @@
     <h3>営業支援・CRM / MA構築</h3>
     <p>顧客情報の一元管理と営業プロセスの可視化で、売上の最大化をサポートします。</p>
   </a>
+   <a href="service-dx.html">業務設計・DX 推進</a>
+   <a href="service-education.html">教育・人材育成プログラム</a>
+   <a href="service-web.html">Web制作・マーケティング支援</a>
 
-  <!-- 2つ目以降は、あとでDX・教育・Web用に同じように書き換える -->
-</div>
-
-      <li><span>業務設計 ・ DX 推進</span></li>
-      <li><span>教育 ・ 人材育成プログラム</span></li>
-      <li><span>Web制作 ・ マーケティング支援</span></li>
+  </div>
     </ul>
   </section>
 
