--- a/service-crm.html
+++ b/service-crm.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>営業支援・CRM / MA構築 | 株式会社EXPAND</title>
- <meta name="description" content="営業支援・CRM / MA構築サービスのご紹介。顧客情報の一元管理、営業プロセスの可視化、自動フォローの仕組みづくりまで、成果が出るまで伴走します。">
+　<meta name="description" content="営業支援・CRM / MA構築サービスのご紹介。顧客情報の一元管理、営業プロセスの可視化、自動フォローの仕組みづくりまで、成果が出るまで伴走します。">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/styles.css?v=3">
- <meta property="og:title" content="営業支援・CRM / MA構築 | 株式会社EXPAND">
- <meta property="og:description" content="顧客情報の一元管理と営業プロセスの標準化で、売上の最大化をサポートします。">
+  <meta property="og:title" content="営業支援・CRM / MA構築 | 株式会社EXPAND">
+　<meta property="og:description" content="顧客情報の一元管理と営業プロセスの標準化で、売上の最大化をサポートします。">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://fs-expand.co.jp/">
 </head>
@@ -28,64 +28,86 @@
   </header>
 
  <main>
-  <!-- サービス共通の余白を使うため hero を再利用 -->
+  <!-- Hero -->
   <section class="hero">
     <div class="hero-inner">
       <h1>営業支援・CRM / MA構築</h1>
       <p class="lead">
-        「お客様情報がバラバラで、誰が何を対応しているか分からない」<br>
-        そんな状態から抜け出し、<br>
-        顧客情報と営業プロセスを一元管理できる仕組みづくりを支援します。
+        顧客情報の一元管理と営業プロセスの見える化で、<br>
+        「属人的な営業」から「再現性のある営業」への転換を支援します。
       </p>
     </div>
   </section>
 
+  <!-- 課題セクション -->
   <section class="section">
-    <div class="inner">
-      <h2>こんな課題はありませんか？</h2>
-      <ul class="problem-list">
-        <li>顧客情報がエクセルや名刺管理アプリなどに分散している</li>
-        <li>誰がどのお客様に、いつ何を対応したかが分からない</li>
-        <li>案件の見込み状況が人ごとで管理されていて、共有されていない</li>
-        <li>メルマガやステップメールを送りたいが、仕組み化できていない</li>
-      </ul>
-    </div>
+    <h2>こんな課題はありませんか？</h2>
+    <ul>
+      <li>顧客情報が Excel・名刺・個人メモなどに分散していて探すだけで時間がかかる</li>
+      <li>誰が・どのお客様に・どこまで対応しているのかが分からない</li>
+      <li>案件の見込み状況が担当者の頭の中だけにあり、正確な売上予測が立てられない</li>
+      <li>フォロー漏れや失注理由の蓄積ができておらず、改善の打ち手が打てない</li>
+      <li>CRM や MA を導入したものの、十分に使いこなせていない</li>
+    </ul>
   </section>
 
+  <!-- 解決策セクション -->
   <section class="section">
-    <div class="inner">
-      <h2>EXAPANDができること</h2>
-      <ul class="feature-list">
-        <li>貴社の営業スタイルに合わせたCRM / MAツールの選定・設計</li>
-        <li>顧客情報・案件情報・対応履歴の一元管理</li>
-        <li>追客メールや定期フォローの自動化シナリオ設計</li>
-        <li>現場メンバーが使いこなせるようにする運用トレーニング</li>
-      </ul>
-    </div>
+    <h2>EXPAND が提供すること</h2>
+    <h3>1. 顧客情報の一元管理設計</h3>
+    <p>
+      HubSpot・Salesforce・Zoho などの中から、御社の規模・体制・予算に合ったツールを選定し、<br>
+      「誰が見てもすぐに状況が分かる」顧客管理の画面設計を行います。
+    </p>
+
+    <h3>2. 営業プロセスの見える化・標準化</h3>
+    <p>
+      現場ヒアリングを行い、案件ステージ・受注確度・活動履歴・KPI を整理します。<br>
+      個々の営業スタイルに頼るのではなく、チーム全体で共有できる「営業の型」をつくります。
+    </p>
+
+    <h3>3. MA（マーケティングオートメーション）の仕組みづくり</h3>
+    <p>
+      メルマガやステップメール、スコアリングなどを活用し、<br>
+      「問い合わせ前の見込み顧客」に対しても自動でフォローできる状態を整えます。
+    </p>
+
+    <h3>4. 運用定着までの伴走支援</h3>
+    <p>
+      ツールを導入して終わりではなく、<br>
+      定例ミーティングやダッシュボード改善を通じて、「成果が出るまで」伴走します。
+    </p>
   </section>
 
+  <!-- 導入ステップ -->
   <section class="section">
-    <div class="inner">
-      <h2>支援の流れ</h2>
-      <ol class="flow-list">
-        <li><strong>現状ヒアリング：</strong> 営業体制・KPI・既存ツールを確認</li>
-        <li><strong>設計：</strong> 顧客・案件・活動履歴の管理項目とフローを定義</li>
-        <li><strong>構築：</strong> CRM / MA環境の構築・連携・初期設定</li>
-        <li><strong>トレーニング：</strong> 営業メンバー向けハンズオン研修</li>
-        <li><strong>運用フォロー：</strong> 使いながらの改善提案・ダッシュボード整備</li>
-      </ol>
-    </div>
+    <h2>導入ステップ</h2>
+    <ol>
+      <li>現状ヒアリング（課題・体制・ツール環境の把握）</li>
+      <li>CRM / MA の構成設計（どの情報をどこまで持つか）</li>
+      <li>ツール選定・初期設定・画面設計</li>
+      <li>データ移行・テスト運用</li>
+      <li>営業チーム向けトレーニング・マニュアル整備</li>
+      <li>月次の振り返りと改善提案</li>
+    </ol>
   </section>
 
-  <section class="cta section">
-    <div class="cta-inner">
-      <h2>まずは営業の現状を一緒に整理しませんか？</h2>
-      <p>
-        現在の管理方法や課題をお伺いしたうえで、<br>
-        無理のないステップでの仕組みづくりをご提案します。
-      </p>
-      <a href="contact.html" class="btn">営業支援について相談する</a>
-    </div>
+  <!-- 効果セクション -->
+  <section class="section">
+    <h2>導入後に期待できること</h2>
+    <ul>
+      <li>顧客情報の散在がなくなり、「探す時間」が大幅に削減される</li>
+      <li>案件状況が一目で分かり、売上予測の精度が上がる</li>
+      <li>フォロー漏れが減り、受注率が向上する</li>
+      <li>新人・中途でも、一定水準の提案ができるようになる</li>
+      <li>会議での「状況確認」の時間が減り、「打ち手の議論」に時間が使える</li>
+    </ul>
+  </section>
+
+  <!-- CTA -->
+  <section class="cta">
+    <p>まずは現在の営業プロセスや管理方法について、お気軽にご相談ください。</p>
+    <a href="contact.html" class="btn">無料相談を申し込む</a>
   </section>
 </main>
 
