--- a/service-dx.html
+++ b/service-dx.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>業務設計・DX推進 | 株式会社EXPAND</title>
-<meta name="description" content="業務設計・DX推進サービスのご紹介。業務の可視化、標準化、不要業務の削減、DXツール導入支援まで、現場の負担軽減と生産性向上を実現します。">
+  <meta name="description" content="業務設計・DX推進サービスのご紹介。現場の業務を可視化し、ムダな作業の削減とDXツールの導入・定着を支援します。">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/styles.css?v=3">
- <meta property="og:title" content="業務設計・DX推進 | 株式会社EXPAND">
- <meta property="og:description" content="業務プロセス改革とDX推進で、生産性向上・コスト削減・再現性の高い組織づくりを支援します。">
+  <meta property="og:title" content="業務設計・DX推進 | 株式会社EXPAND">
+  <meta property="og:description" content="業務の見える化とDX推進で、生産性向上と属人化の解消をサポートします。">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://fs-expand.co.jp/">
 </head>
@@ -28,47 +28,90 @@
   </header>
 
  <main>
+  <!-- Hero -->
   <section class="hero">
     <div class="hero-inner">
       <h1>業務設計・DX推進</h1>
       <p class="lead">
-        現場の業務フローを見える化し、<br>
-        どこにムダがあるのか・何を自動化すべきかを一緒に整理します。
+        現場の声を起点に業務を見直し、<br>
+        ムダを減らして「人が成果を出す時間」を増やします。
       </p>
     </div>
   </section>
 
+  <!-- 課題 -->
   <section class="section">
-    <div class="inner">
-      <h2>こんな課題はありませんか？</h2>
-      <ul class="problem-list">
-        <li>紙やExcelに頼ったアナログな業務が多い</li>
-        <li>人に聞かないとやり方が分からない仕事が多い</li>
-        <li>属人化していて、引き継ぎや増員が難しい</li>
-      </ul>
-    </div>
+    <h2>こんなお悩みはありませんか？</h2>
+    <ul>
+      <li>日々の業務が忙しく、常に「手一杯」だが、何がムダか整理できていない</li>
+      <li>同じ作業を、複数人がそれぞれの方法で行っており、属人化している</li>
+      <li>ツール導入をしてきたが、結局使われず形骸化している</li>
+      <li>引き継ぎのたびにミスが起き、品質が不安定になっている</li>
+      <li>DX の必要性は感じているが、どこから手をつければよいか分からない</li>
+    </ul>
   </section>
 
+  <!-- 解決策 -->
   <section class="section">
-    <div class="inner">
-      <h2>EXAPANDができること</h2>
-      <ul class="feature-list">
-        <li>現場ヒアリングによる業務フローの見える化</li>
-        <li>ムダな業務・2重入力の洗い出しと削減プランの策定</li>
-        <li>ツール選定・導入支援（SaaS・RPAなど）</li>
-        <li>「誰でもできる」標準手順書（マニュアル）の整備</li>
-      </ul>
-    </div>
+    <h2>EXPAND のアプローチ</h2>
+
+    <h3>1. 業務棚卸しとボトルネックの可視化</h3>
+    <p>
+      メンバーへのインタビューや業務フロー図の作成を通じて、<br>
+      「どの業務に、どれだけ時間がかかっているのか」を見える化します。
+    </p>
+
+    <h3>2. 標準フロー設計と属人化の解消</h3>
+    <p>
+      現場のやり方を尊重しつつ、<br>
+      誰が担当しても同じ品質で実行できる標準フローとルールを設計します。
+    </p>
+
+    <h3>3. DXツールの選定・導入・設定</h3>
+    <p>
+      タスク管理・情報共有・ワークフローなど、<br>
+      必要に応じて Notion / Backlog / Google Workspace / Slack 等のツールを選定・設定します。
+    </p>
+
+    <h3>4. 「使われる」運用まで伴走</h3>
+    <p>
+      ルールを決めるだけでなく、実際の運用で困るポイントを一つずつ解消しながら、<br>
+      現場に根付くまで伴走します。
+    </p>
   </section>
 
-  <section class="cta section">
-    <div class="cta-inner">
-      <h2>まずは現在の業務フローを一緒に棚卸ししませんか？</h2>
-      <p>ヒアリングベースで、改善余地の大きいポイントを整理いたします。</p>
-      <a href="contact.html" class="btn">DX・業務改善について相談する</a>
-    </div>
+  <!-- ステップ -->
+  <section class="section">
+    <h2>ご支援の流れ</h2>
+    <ol>
+      <li>キックオフ・現状のお困りごとの整理</li>
+      <li>業務棚卸し・業務フロー作成</li>
+      <li>課題の優先順位付け・改善方針の策定</li>
+      <li>標準フロー・ルール作成、DXツール選定</li>
+      <li>ツール導入・設定・試験運用</li>
+      <li>運用フォロー・定着支援・振り返り</li>
+    </ol>
   </section>
- </main>
+
+  <!-- 効果 -->
+  <section class="section">
+    <h2>期待できる効果</h2>
+    <ul>
+      <li>ムダな作業・二重入力が減り、残業時間の削減につながる</li>
+      <li>業務のやり方が整理され、誰が担当しても品質が安定する</li>
+      <li>情報共有がスムーズになり、判断スピードが上がる</li>
+      <li>DXツールが「入れただけ」で終わらず、実際の成果につながる</li>
+      <li>マネージャーが「仕組みづくり」に専念できるようになる</li>
+    </ul>
+  </section>
+
+  <!-- CTA -->
+  <section class="cta">
+    <p>業務改善やDXについて、「まずは話を聞いてみたい」という段階でも大歓迎です。</p>
+    <a href="contact.html" class="btn">業務・DXの相談をする</a>
+  </section>
+</main>
+
 
   
   <footer class="site-footer">
