--- a/service-education.html
+++ b/service-education.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>教育・人材育成プログラム | 株式会社EXPAND</title>
-  <meta name="description" content="教育・人材育成プログラムのご紹介。営業研修、マネジメント研修、オンボーディング整備など、自走する組織づくりを支援します。">
+  <meta name="description" content="教育・人材育成プログラムのご紹介。オンボーディング設計から研修、1on1の仕組みづくりまで、自走する組織づくりを支援します。"> 
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/styles.css?v=3">
  <meta property="og:title" content="教育・人材育成プログラム | 株式会社EXPAND">
- <meta property="og:description" content="人材育成・教育体系の構築により、自発的に学び成果を出すチーム文化づくりをサポートします。">  
+ <meta property="og:description" content="人材が育ち続ける教育体系と育成の仕組みづくりで、離職防止と組織力向上をサポートします。">  
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://fs-expand.co.jp/">
 </head>
@@ -28,48 +28,89 @@
   </header>
 
 <main>
+  <!-- Hero -->
   <section class="hero">
     <div class="hero-inner">
       <h1>教育・人材育成プログラム</h1>
       <p class="lead">
-        人材を「属人的なスキル」ではなく、<br>
-        再現性のある仕組みで育てるためのプログラムを設計します。
+        「人は採用して終わり」ではなく、<br>
+        入社後に育ち続けるための仕組みを一緒につくります。
       </p>
     </div>
   </section>
 
+  <!-- 課題 -->
   <section class="section">
-    <div class="inner">
-      <h2>こんな課題はありませんか？</h2>
-      <ul class="problem-list">
-        <li>新人が育つ前に辞めてしまう</li>
-        <li>人によって教え方・評価基準がバラバラ</li>
-        <li>リーダー候補がなかなか育たない</li>
-      </ul>
-    </div>
+    <h2>こんな課題はありませんか？</h2>
+    <ul>
+      <li>新人がなかなか戦力化せず、現場メンバーの負担が増えている</li>
+      <li>教育が属人的で、教える人によって品質やスピードがバラバラ</li>
+      <li>研修を行っても「やりっぱなし」で、現場で活かされていない</li>
+      <li>評価・フィードバックの基準があいまいで、メンバーの納得感が低い</li>
+      <li>マネージャーが日々の業務に追われ、育成に時間を割けていない</li>
+    </ul>
   </section>
 
+  <!-- 解決策 -->
   <section class="section">
-    <div class="inner">
-      <h2>EXAPANDができること</h2>
-      <ul class="feature-list">
-        <li>職種ごとの「求めるスキル・行動」の定義</li>
-        <li>新人〜リーダー層までの育成ステップ設計</li>
-        <li>オンボーディング・OJTプログラムの整備</li>
-        <li>現場で回る評価・フィードバックの仕組みづくり</li>
-      </ul>
-    </div>
+    <h2>EXPAND がご支援できること</h2>
+
+    <h3>1. 教育体系・カリキュラムの設計</h3>
+    <p>
+      「どのポジションの人に、どの段階で、何を身につけてもらうか」を整理し、<br>
+      一貫性のある教育体系とカリキュラムを作成します。
+    </p>
+
+    <h3>2. オンボーディング（立ち上がり支援）の仕組み化</h3>
+    <p>
+      入社～3ヶ月・6ヶ月など、期間ごとの到達イメージを言語化し、<br>
+      OJT・OFF-JT を組み合わせたオンボーディングプランを設計します。
+    </p>
+
+    <h3>3. 研修・ワークショップの企画・実施</h3>
+    <p>
+      営業スキル、コミュニケーション、マネジメント基礎など、<br>
+      御社の課題に合わせた研修プログラムをオーダーメイドで設計します。
+    </p>
+
+    <h3>4. 1on1 とフィードバックの仕組みづくり</h3>
+    <p>
+      「個人の成長」と「組織の目標」を結びつける1on1の進め方・シート類を整備し、<br>
+      マネージャーが育成しやすい環境を整えます。
+    </p>
   </section>
 
-  <section class="cta section">
-    <div class="cta-inner">
-      <h2>「人が育つ仕組み」を一緒につくりませんか？</h2>
-      <p>現状の育成・評価のやり方を伺い、改善の方向性をご提案します。</p>
-      <a href="contact.html" class="btn">人材育成について相談する</a>
-    </div>
+  <!-- ステップ -->
+  <section class="section">
+    <h2>ご支援の流れ</h2>
+    <ol>
+      <li>現状の育成状況・離職状況・組織課題のヒアリング</li>
+      <li>教育課題の整理と優先順位付け</li>
+      <li>教育体系・オンボーディングプランの設計</li>
+      <li>研修・ワークショップの実施（必要に応じて）</li>
+      <li>1on1・評価の仕組みづくり支援</li>
+      <li>運用フォロー・改善提案</li>
+    </ol>
+  </section>
+
+  <!-- 効果 -->
+  <section class="section">
+    <h2>期待できる効果</h2>
+    <ul>
+      <li>新入社員・中途社員の立ち上がりが早くなる</li>
+      <li>「誰が教えても同じレベル」に近づき、教育の属人化が減る</li>
+      <li>学びが現場の行動変化につながる</li>
+      <li>メンバーのキャリアイメージが明確になり、エンゲージメントが高まる</li>
+      <li>離職率の低下・採用コストの削減につながる</li>
+    </ul>
+  </section>
+
+  <!-- CTA -->
+  <section class="cta">
+    <p>人材育成やオンボーディングについてのご相談は、オンラインにてお受けしています。</p>
+    <a href="contact.html" class="btn">人材育成について相談する</a>
   </section>
 </main>
-
 
   <footer class="site-footer">
     <div class="footer-inner">
