--- a/service-web.html
+++ b/service-web.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Web制作・マーケティング支援 | 株式会社EXPAND</title>
-  <meta name="description" content="Web制作・マーケティング支援サービスのご紹介。コーポレートサイト制作、SEO、SNS運用、広告運用まで、成果につながるデジタル戦略をサポートします。">
+  <meta name="description" content="Web制作・マーケティング支援サービスのご紹介。コーポレートサイト制作からSEO、広告運用まで、成果につながるデジタル戦略を支援します。">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/styles.css?v=3">
-  <meta property="og:title" content="Web制作・マーケティィング支援 | 株式会社EXPAND">
-  <meta property="og:description" content="Web制作とマーケティング戦略により、集客・問い合わせ増加・ブランド向上を実現します。">
+  <meta property="og:title" content="Web制作・マーケティング支援 | 株式会社EXPAND">
+  <meta property="og:description" content="「伝わる」Webサイトとマーケティング設計で、問い合わせ増加と売上向上をサポートします。">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://fs-expand.co.jp/">
 </head>
@@ -28,48 +28,88 @@
   </header>
 
 <main>
+  <!-- Hero -->
   <section class="hero">
     <div class="hero-inner">
       <h1>Web制作・マーケティング支援</h1>
       <p class="lead">
-        「作って終わり」ではなく、<br>
-        事業の成果につながるWebサイト・施策を設計します。
+        「きれいなだけのサイト」ではなく、<br>
+        事業の目的達成に貢献する Web とマーケティングを設計します。
       </p>
     </div>
   </section>
 
+  <!-- 課題 -->
   <section class="section">
-    <div class="inner">
-      <h2>こんな課題はありませんか？</h2>
-      <ul class="problem-list">
-        <li>とりあえず作ったホームページがそのまま放置されている</li>
-        <li>問い合わせや資料請求がほとんど来ない</li>
-        <li>どのチャネルに力を入れるべきか分からない</li>
-      </ul>
-    </div>
+    <h2>こんなお悩みはありませんか？</h2>
+    <ul>
+      <li>今のホームページが古く、会社の魅力を十分に伝えられていない</li>
+      <li>問い合わせ数が少なく、「名刺代わり」で終わってしまっている</li>
+      <li>SEO や広告、SNS を試してみたが、効果がよく分からない</li>
+      <li>そもそも何から手をつければよいか分からない</li>
+      <li>制作会社とのやり取りに時間を取られ、本業に集中できない</li>
+    </ul>
   </section>
 
+  <!-- 解決策 -->
   <section class="section">
-    <div class="inner">
-      <h2>EXAPANDができること</h2>
-      <ul class="feature-list">
-        <li>事業戦略から逆算したサイト構成・コンテンツ設計</li>
-        <li>LP・コーポレートサイト・採用サイトなどの制作</li>
-        <li>SEO・広告・SNSなどを組み合わせた集客導線づくり</li>
-        <li>公開後のアクセス分析と改善提案</li>
-      </ul>
-    </div>
+    <h2>EXPAND ができること</h2>
+
+    <h3>1. 目的とターゲットを明確にしたサイト設計</h3>
+    <p>
+      「誰に・何を伝え・どんな行動をしてほしいのか」を整理し、<br>
+      目的に合ったサイト構成・導線を設計します。
+    </p>
+
+    <h3>2. コーポレートサイト制作</h3>
+    <p>
+      デザイン、コピー、構成を含めてトータルでサポートします。<br>
+      WordPress / 静的HTML / Notion など、ご要望と運用体制に合わせて構築方法を選定します。
+    </p>
+
+    <h3>3. SEO・コンテンツ設計</h3>
+    <p>
+      検索ニーズの調査を行い、狙うべきキーワードとコンテンツの方向性を整理。<br>
+      内部対策や構造設計も含めて、検索されやすい土台をつくります。
+    </p>
+
+    <h3>4. 広告・SNSを含めたマーケティング支援</h3>
+    <p>
+      必要に応じて、Google広告やMeta広告、SNS運用の方針づくりも支援します。<br>
+      「とりあえず出す」のではなく、数字を見ながら小さく検証していくスタイルです。
+    </p>
   </section>
 
-  <section class="cta section">
-    <div class="cta-inner">
-      <h2>Webを「ちゃんと成果が出るチャネル」に変えたい方へ</h2>
-      <p>現在のサイトや集客状況を拝見し、優先順位の高い施策をご提案します。</p>
-      <a href="contact.html" class="btn">Web施策について相談する</a>
-    </div>
+  <!-- ステップ -->
+  <section class="section">
+    <h2>ご支援の流れ</h2>
+    <ol>
+      <li>現状サイト・集客状況のヒアリング</li>
+      <li>目的・ターゲット・競合の整理</li>
+      <li>サイト構成案・ワイヤーフレームの作成</li>
+      <li>デザイン・コピー制作</li>
+      <li>実装・テスト・公開</li>
+      <li>公開後の改善提案（アクセス解析を含む）</li>
+    </ol>
+  </section>
+
+  <!-- 効果 -->
+  <section class="section">
+    <h2>期待できる効果</h2>
+    <ul>
+      <li>自社の強みや価値が、初めての方にも分かりやすく伝わる</li>
+      <li>問い合わせや資料請求など、具体的なアクションが増える</li>
+      <li>営業前の「第一印象」を整えられることで、商談がスムーズになる</li>
+      <li>Web・デジタルまわりの方針が整理され、迷いが減る</li>
+    </ul>
+  </section>
+
+  <!-- CTA -->
+  <section class="cta">
+    <p>新規制作・リニューアル・部分的な改善など、まずはお気軽にご相談ください。</p>
+    <a href="contact.html" class="btn">Web・マーケティングの相談をする</a>
   </section>
 </main>
-
 
   <footer class="site-footer">
     <div class="footer-inner">
