--- a/index.html
+++ b/index.html
@@ -112,45 +112,46 @@
     </div>
   </section>
 
- <section class="section services">
+<section class="services section">
   <h2>サービス</h2>
 
-  <div class="service-list">
-
-    <div class="service-card">
-      <a href="service-crm.html">営業支援・CRM / MA構築</a>
+  <div class="services-list">
+    
+    <a class="service-card" href="service-crm.html">
+      <h3>営業支援・CRM / MA構築</h3>
       <p>
         顧客情報の一元管理と営業プロセスの可視化・自動化で、
         売上の最大化をサポートします。
       </p>
-    </div>
+    </a>
 
-    <div class="service-card">
-      <a href="service-dx.html">業務設計・DX推進</a>
+    <a class="service-card" href="service-dx.html">
+      <h3>業務設計・DX推進</h3>
       <p>
         業務の見える化・標準化・システム化を通じて、
         生産性向上とムダ削減を実現します。
       </p>
-    </div>
+    </a>
 
-    <div class="service-card">
-      <a href="service-hr.html">教育・人材育成プログラム</a>
+    <a class="service-card" href="service-education.html">
+      <h3>教育・人材育成プログラム</h3>
       <p>
         現場実務に直結した研修・オンボーディング設計で、
-        「自走できる人材」を育てる仕組みづくりを支援します。
+        自走できる人材を育てる仕組みづくりを支援します。
       </p>
-    </div>
+    </a>
 
-    <div class="service-card">
-      <a href="service-web.html">Web制作・マーケティング支援</a>
+    <a class="service-card" href="service-web.html">
+      <h3>Web制作・マーケティング支援</h3>
       <p>
-        目的に合わせたコーポレートサイト制作やSEO・広告運用で、
+        コーポレートサイト制作からSEO・広告運用まで、
         集客から商談化まで一気通貫で支援します。
       </p>
-    </div>
+    </a>
 
   </div>
 </section>
+
 
   <section class="cta section">
     <h2>まずは課題をお聞かせください</h2>
