--- a/service-crm.html
+++ b/service-crm.html
@@ -104,6 +104,13 @@
     </ul>
   </section>
 
+   <nav class="service-nav">
+  <a href="service-crm.html" class="active">営業支援・CRM / MA構築</a>
+  <a href="service-dx.html">業務設計・DX推進</a>
+  <a href="service-education.html">教育・人材育成プログラム</a>
+  <a href="service-web.html">Web制作・マーケティング支援</a>
+</nav>
+
   <!-- CTA -->
   <section class="cta">
     <p>まずは現在の営業プロセスや管理方法について、お気軽にご相談ください。</p>
