--- a/service-dx.html
+++ b/service-dx.html
@@ -105,6 +105,13 @@
     </ul>
   </section>
 
+   <nav class="service-nav">
+  <a href="service-crm.html">営業支援・CRM / MA構築</a>
+  <a href="service-dx.html" class="active">業務設計・DX推進</a>
+  <a href="service-education.html">教育・人材育成プログラム</a>
+  <a href="service-web.html">Web制作・マーケティング支援</a>
+</nav>
+
   <!-- CTA -->
   <section class="cta">
     <p>業務改善やDXについて、「まずは話を聞いてみたい」という段階でも大歓迎です。</p>
