--- a/service-education.html
+++ b/service-education.html
@@ -105,6 +105,13 @@
     </ul>
   </section>
 
+  <nav class="service-nav">
+  <a href="service-crm.html">営業支援・CRM / MA構築</a>
+  <a href="service-dx.html">業務設計・DX推進</a>
+  <a href="service-education.html" class="active">教育・人材育成プログラム</a>
+  <a href="service-web.html">Web制作・マーケティング支援</a>
+　</nav>
+
   <!-- CTA -->
   <section class="cta">
     <p>人材育成やオンボーディングについてのご相談は、オンラインにてお受けしています。</p>
