--- a/service-web.html
+++ b/service-web.html
@@ -104,6 +104,13 @@
     </ul>
   </section>
 
+  <nav class="service-nav">
+  <a href="service-crm.html">営業支援・CRM / MA構築</a>
+  <a href="service-dx.html">業務設計・DX推進</a>
+  <a href="service-education.html">教育・人材育成プログラム</a>
+  <a href="service-web.html" class="active">Web制作・マーケティング支援</a>
+　</nav>
+
   <!-- CTA -->
   <section class="cta">
     <p>新規制作・リニューアル・部分的な改善など、まずはお気軽にご相談ください。</p>
