--- a/service-crm.html
+++ b/service-crm.html
@@ -51,6 +51,111 @@
     </ul>
   </section>
 
+<section class="compare">
+  <h2>導入前と導入後のイメージ</h2>
+
+  <div class="compare-inner">
+
+    <!-- Before -->
+    <div class="compare-block compare-before">
+      <div class="compare-label">Before（導入前のよくある状態）</div>
+      <ul>
+        <li>
+          <strong>顧客情報がバラバラ</strong><br>
+          Excel・名刺アプリ・担当者メモなどに散在し、探すだけで時間がかかる。
+        </li>
+        <li>
+          <strong>営業状況が見えない・属人化</strong><br>
+          誰が何を対応しているか把握できず、引き継ぎも難しい。
+        </li>
+        <li>
+          <strong>案件の優先順位が決められない</strong><br>
+          どの案件をどこまで追いかけるべきか、感覚に頼ってしまう。
+        </li>
+        <li>
+          <strong>対応漏れ・機会損失が発生</strong><br>
+          フォロー忘れや返信漏れが起き、商談機会を逃してしまう。
+        </li>
+      </ul>
+    </div>
+
+    <!-- After -->
+    <div class="compare-block compare-after">
+      <div class="compare-label after">After（EXPAND支援後のイメージ）</div>
+      <ul>
+        <li>
+          <strong>顧客情報を一元管理</strong><br>
+          顧客・案件・履歴がCRMに集約され、「どこを見ればいいか」が明確になる。
+        </li>
+        <li>
+          <strong>営業プロセスが見える化</strong><br>
+          案件のステージ・担当者・次のアクションが一目で分かり、チームで共有できる。
+        </li>
+        <li>
+          <strong>対応漏れゼロを目指せる仕組み</strong><br>
+          リマインドやMAシナリオで、フォロー忘れや抜け漏れを防げる。
+        </li>
+        <li>
+          <strong>“売れる仕組み” が組織に残る</strong><br>
+          個人のやり方に依存せず、誰が入っても一定レベルで動ける営業体制になる。
+        </li>
+      </ul>
+    </div>
+
+  </div>
+</section>
+
+   <section class="process-flow">
+  <h2>ご支援の流れ</h2>
+
+  <div class="process-steps">
+    <div class="process-step">
+      <div class="step-number">STEP 1</div>
+      <h3>現状ヒアリング</h3>
+      <p>
+        組織体制・営業プロセス・顧客管理の方法などを丁寧にヒアリングし、
+        どこにムダやボトルネックがあるかを一緒に整理します。
+      </p>
+    </div>
+
+    <div class="process-step">
+      <div class="step-number">STEP 2</div>
+      <h3>課題の整理とゴール設定</h3>
+      <p>
+        「何を改善したいのか」「どの状態を目指すのか」を明確にし、
+        CRM / MA 導入・改善の目的と優先順位を決めます。
+      </p>
+    </div>
+
+    <div class="process-step">
+      <div class="step-number">STEP 3</div>
+      <h3>設計・ツール選定</h3>
+      <p>
+        御社の規模や予算に合わせて最適なツールを選定し、
+        顧客情報の持ち方・案件ステージ・KPI などの設計を行います。
+      </p>
+    </div>
+
+    <div class="process-step">
+      <div class="step-number">STEP 4</div>
+      <h3>構築・初期設定</h3>
+      <p>
+        CRM / MA 環境の構築、データ移行、画面レイアウトの調整などを行い、
+        日常業務で使える状態まで整えます。
+      </p>
+    </div>
+
+    <div class="process-step">
+      <div class="step-number">STEP 5</div>
+      <h3>運用定着・改善サポート</h3>
+      <p>
+        実際の運用状況を見ながら、ダッシュボードや運用ルールを改善し、
+        組織に定着するまで伴走支援します。
+      </p>
+    </div>
+  </div>
+</section>
+   
   <!-- 解決策セクション -->
   <section class="section">
     <h2>EXPAND が提供すること</h2>
@@ -78,6 +183,55 @@
       定例ミーティングやダッシュボード改善を通じて、「成果が出るまで」伴走します。
     </p>
   </section>
+
+   <section class="crm-layout">
+  <h2>CRM導入後のイメージ</h2>
+
+  <div class="crm-grid">
+    <div class="crm-card">
+      <h3>ダッシュボード</h3>
+      <p>
+        今月の案件数・受注金額・活動件数などを一画面で確認でき、
+        日々の営業状況を数字で把握できます。
+      </p>
+      <ul class="crm-ui">
+        <li class="bar"></li>
+        <li class="bar short"></li>
+        <li class="bar"></li>
+      </ul>
+    </div>
+
+    <div class="crm-card">
+      <h3>案件ボード</h3>
+      <p>
+        案件がステージごとに並び、「どの案件を優先して追うべきか」が
+        直感的に分かるようになります。
+      </p>
+      <ul class="crm-ui columns">
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
+
+    <div class="crm-card">
+      <h3>顧客詳細画面</h3>
+      <p>
+        商談履歴・メール・メモなどが一箇所にまとまり、
+        誰が見ても同じ情報から次の一手を判断できます。
+      </p>
+      <ul class="crm-ui">
+        <li class="line"></li>
+        <li class="line"></li>
+        <li class="line"></li>
+      </ul>
+    </div>
+  </div>
+
+  <p class="crm-note">
+    ※実際のツールは御社の環境に合わせて選定・設計します。Salesforce / HubSpot / Zoho などに対応可能です。
+  </p>
+</section>
 
   <!-- 導入ステップ -->
   <section class="section">
