--- a/service-dx.html
+++ b/service-dx.html
@@ -27,98 +27,114 @@
     </nav>
   </header>
 
- <main>
-  <!-- Hero -->
-  <section class="hero">
-    <div class="hero-inner">
-      <h1>業務設計・DX推進</h1>
-      <p class="lead">
-        現場の声を起点に業務を見直し、<br>
-        ムダを減らして「人が成果を出す時間」を増やします。
+ <section class="section">
+  <h1 class="page-title">業務設計・DX推進</h1>
+  <p class="lead">
+    日々の業務が人に依存していて属人化している。<br>
+    ツールは入れたのに、現場でほとんど使われていない。<br>
+    そんな状態から抜け出し、「しくみ」で回る業務とDX推進を支援します。
+  </p>
+</section>
+
+<section class="section">
+  <h2>こんな課題はありませんか？</h2>
+  <ul class="point-list">
+    <li>業務フローが整理されておらず、人によってやり方がバラバラ</li>
+    <li>Excel・紙・チャットなど、情報があちこちに散らばっている</li>
+    <li>RPAやSaaSを導入したものの、現場で使いこなせていない</li>
+    <li>マニュアルはあるが、現場の実態と合っておらず形骸化している</li>
+    <li>DX推進担当はいるが、どこから手をつけるべきか決めきれない</li>
+  </ul>
+</section>
+
+<section class="section">
+  <h2>業務設計・DX推進のイメージ</h2>
+  <div class="crm-ui">
+    <div class="crm-card">
+      <h3>全体業務フロー図</h3>
+      <p>
+        部門ごとに分断されていた業務を一枚のフロー図に整理。<br>
+        ボトルネックやムダな手戻りが見えるようになります。
       </p>
+      <ul class="bar-list">
+        <li class="bar"></li>
+        <li class="bar"></li>
+        <li class="bar short"></li>
+      </ul>
     </div>
-  </section>
 
-  <!-- 課題 -->
-  <section class="section">
-    <h2>こんなお悩みはありませんか？</h2>
-    <ul>
-      <li>日々の業務が忙しく、常に「手一杯」だが、何がムダか整理できていない</li>
-      <li>同じ作業を、複数人がそれぞれの方法で行っており、属人化している</li>
-      <li>ツール導入をしてきたが、結局使われず形骸化している</li>
-      <li>引き継ぎのたびにミスが起き、品質が不安定になっている</li>
-      <li>DX の必要性は感じているが、どこから手をつければよいか分からない</li>
-    </ul>
-  </section>
+    <div class="crm-card">
+      <h3>標準業務マニュアル</h3>
+      <p>
+        担当者ごとの「暗黙知」を言語化し、ステップごとに標準化。<br>
+        誰が見ても同じ手順で進められる状態をつくります。
+      </p>
+      <ul class="bar-list">
+        <li class="bar"></li>
+        <li class="bar"></li>
+        <li class="bar short"></li>
+      </ul>
+    </div>
 
-  <!-- 解決策 -->
-  <section class="section">
-    <h2>EXPAND のアプローチ</h2>
+    <div class="crm-card">
+      <h3>ツール連携・自動化</h3>
+      <p>
+        既存のSaaSや社内システムを整理し、<br>
+        「手作業→自動化」に置き換えられるポイントを設計します。
+      </p>
+      <ul class="bar-list">
+        <li class="bar"></li>
+        <li class="bar"></li>
+        <li class="bar short"></li>
+      </ul>
+    </div>
+  </div>
+  <p class="note">
+    ※ 実際のツール・設計内容は御社の環境に合わせて個別にご提案します。
+  </p>
+</section>
 
-    <h3>1. 業務棚卸しとボトルネックの可視化</h3>
-    <p>
-      メンバーへのインタビューや業務フロー図の作成を通じて、<br>
-      「どの業務に、どれだけ時間がかかっているのか」を見える化します。
-    </p>
+<section class="section">
+  <h2>サービス内容</h2>
+  <ul class="point-list">
+    <li>現状業務の棚卸し・ヒアリング（担当者インタビュー・ログ分析など）</li>
+    <li>業務フロー図の作成（AS-IS / TO-BEの整理）</li>
+    <li>標準業務プロセスの設計とマニュアル化</li>
+    <li>使用中ツールの棚卸しと、統合・廃止・入れ替えの検討</li>
+    <li>RPA・SaaS・ノーコードツール等を用いた自動化の設計</li>
+    <li>パイロット導入〜全社展開までのDXロードマップ策定</li>
+  </ul>
+</section>
 
-    <h3>2. 標準フロー設計と属人化の解消</h3>
-    <p>
-      現場のやり方を尊重しつつ、<br>
-      誰が担当しても同じ品質で実行できる標準フローとルールを設計します。
-    </p>
+<section class="section">
+  <h2>導入ステップ</h2>
+  <ol class="step-list">
+    <li><strong>現状ヒアリング</strong>：経営層・現場それぞれから課題を整理</li>
+    <li><strong>業務可視化</strong>：業務フロー図・担当者マップ・利用ツール一覧を作成</li>
+    <li><strong>改善方針の設計</strong>：やめる業務／減らす業務／自動化する業務を定義</li>
+    <li><strong>優先プロジェクトの実行</strong>：インパクトと実現性の高いテーマから着手</li>
+    <li><strong>定着・内製化支援</strong>：運用ルール整備と、社内推進メンバーの育成</li>
+  </ol>
+</section>
 
-    <h3>3. DXツールの選定・導入・設定</h3>
-    <p>
-      タスク管理・情報共有・ワークフローなど、<br>
-      必要に応じて Notion / Backlog / Google Workspace / Slack 等のツールを選定・設定します。
-    </p>
+<section class="section">
+  <h2>想定シーン・事例イメージ</h2>
+  <ul class="case-list">
+    <li>社員数30〜200名規模で、部門ごとに業務がサイロ化している企業</li>
+    <li>バックオフィスの紙・Excel業務を減らしたい管理部門</li>
+    <li>DX推進担当を任されたが、どこから手をつけるか悩んでいるご担当者</li>
+    <li>すでにツールは導入済みだが、思ったほど生産性が上がっていない企業</li>
+  </ul>
+</section>
 
-    <h3>4. 「使われる」運用まで伴走</h3>
-    <p>
-      ルールを決めるだけでなく、実際の運用で困るポイントを一つずつ解消しながら、<br>
-      現場に根付くまで伴走します。
-    </p>
-  </section>
-
-  <!-- ステップ -->
-  <section class="section">
-    <h2>ご支援の流れ</h2>
-    <ol>
-      <li>キックオフ・現状のお困りごとの整理</li>
-      <li>業務棚卸し・業務フロー作成</li>
-      <li>課題の優先順位付け・改善方針の策定</li>
-      <li>標準フロー・ルール作成、DXツール選定</li>
-      <li>ツール導入・設定・試験運用</li>
-      <li>運用フォロー・定着支援・振り返り</li>
-    </ol>
-  </section>
-
-  <!-- 効果 -->
-  <section class="section">
-    <h2>期待できる効果</h2>
-    <ul>
-      <li>ムダな作業・二重入力が減り、残業時間の削減につながる</li>
-      <li>業務のやり方が整理され、誰が担当しても品質が安定する</li>
-      <li>情報共有がスムーズになり、判断スピードが上がる</li>
-      <li>DXツールが「入れただけ」で終わらず、実際の成果につながる</li>
-      <li>マネージャーが「仕組みづくり」に専念できるようになる</li>
-    </ul>
-  </section>
-
-   <nav class="service-nav">
-  <a href="service-crm.html">営業支援・CRM / MA構築</a>
-  <a href="service-dx.html" class="active">業務設計・DX推進</a>
-  <a href="service-education.html">教育・人材育成プログラム</a>
-  <a href="service-web.html">Web制作・マーケティング支援</a>
-</nav>
-
-  <!-- CTA -->
-  <section class="cta">
-    <p>業務改善やDXについて、「まずは話を聞いてみたい」という段階でも大歓迎です。</p>
-    <a href="contact.html" class="btn">業務・DXの相談をする</a>
-  </section>
-</main>
-
+<section class="section section-cta">
+  <h2>まずは現在の業務フローから一緒に整理してみませんか？</h2>
+  <p>
+    「何がムダで、どこから着手すればよいか」を一緒に見える化します。<br>
+    初回はオンラインでの無料相談から、お気軽にご相談ください。
+  </p>
+  <a href="contact.html" class="btn">無料相談を申し込む</a>
+</section>
 
   
   <footer class="site-footer">
