--- a/service-dx.html
+++ b/service-dx.html
@@ -127,7 +127,14 @@
   </ul>
 </section>
 
-<section class="section section-cta">
+  <nav class="service-nav">
+  <a href="service-crm.html" class="active">営業支援・CRM / MA構築</a>
+  <a href="service-dx.html">業務設計・DX推進</a>
+  <a href="service-education.html">教育・人材育成プログラム</a>
+  <a href="service-web.html">Web制作・マーケティング支援</a>
+　</nav>
+  
+  <section class="section section-cta">
   <h2>まずは現在の業務フローから一緒に整理してみませんか？</h2>
   <p>
     「何がムダで、どこから着手すればよいか」を一緒に見える化します。<br>
