--- a/service-dx.html
+++ b/service-dx.html
@@ -27,112 +27,166 @@
     </nav>
   </header>
 
- <section class="section">
-  <h1 class="page-title">業務設計・DX推進</h1>
-  <p class="lead">
-    日々の業務が人に依存していて属人化している。<br>
-    ツールは入れたのに、現場でほとんど使われていない。<br>
-    そんな状態から抜け出し、「しくみ」で回る業務とDX推進を支援します。
-  </p>
+<!-- ========================= -->
+<!-- 業務設計・DX推進：ファーストビュー -->
+<!-- ========================= -->
+<section class="service-fv">
+  <div class="container">
+    <h1 class="service-title">業務設計・DX推進</h1>
+    <p class="service-lead">
+      業務が人に依存して属人化している。ツールを導入したのに現場で活用されていない。<br>
+      そんな状態から抜け出し、「しくみ」で回る業務とDX推進を支援します。
+    </p>
+  </div>
 </section>
 
-<section class="section">
-  <h2>こんな課題はありませんか？</h2>
-  <ul class="point-list">
-    <li>業務フローが整理されておらず、人によってやり方がバラバラ</li>
-    <li>Excel・紙・チャットなど、情報があちこちに散らばっている</li>
-    <li>RPAやSaaSを導入したものの、現場で使いこなせていない</li>
-    <li>マニュアルはあるが、現場の実態と合っておらず形骸化している</li>
-    <li>DX推進担当はいるが、どこから手をつけるべきか決めきれない</li>
-  </ul>
+<!-- ========================= -->
+<!-- 課題セクション -->
+<!-- ========================= -->
+<section class="service-section">
+  <div class="container">
+    <h2 class="section-title">こんな課題はありませんか？</h2>
+    <ul class="problem-list">
+      <li>業務フローが整理されておらず、人によってやり方がバラバラ</li>
+      <li>Excel・紙・チャットなど、情報があちこちに散らばっている</li>
+      <li>RPAやSaaSを導入したものの、現場で使いこなせていない</li>
+      <li>マニュアルが形骸化し、現場に定着していない</li>
+      <li>DX推進をしたいが、どこから着手すべきかわからない</li>
+    </ul>
+  </div>
 </section>
 
-<section class="section">
-  <h2>業務設計・DX推進のイメージ</h2>
-  <div class="crm-ui">
-    <div class="crm-card">
-      <h3>全体業務フロー図</h3>
-      <p>
-        部門ごとに分断されていた業務を一枚のフロー図に整理。<br>
-        ボトルネックやムダな手戻りが見えるようになります。
-      </p>
-      <ul class="bar-list">
-        <li class="bar"></li>
-        <li class="bar"></li>
-        <li class="bar short"></li>
-      </ul>
-    </div>
+<!-- ========================= -->
+<!-- Before / After 図解 -->
+<!-- ========================= -->
+<section class="diagram-before-after">
+  <div class="container">
+    <h2 class="section-title">導入前と導入後のイメージ</h2>
 
-    <div class="crm-card">
-      <h3>標準業務マニュアル</h3>
-      <p>
-        担当者ごとの「暗黙知」を言語化し、ステップごとに標準化。<br>
-        誰が見ても同じ手順で進められる状態をつくります。
-      </p>
-      <ul class="bar-list">
-        <li class="bar"></li>
-        <li class="bar"></li>
-        <li class="bar short"></li>
-      </ul>
-    </div>
+    <div class="diagram-cols">
 
-    <div class="crm-card">
-      <h3>ツール連携・自動化</h3>
-      <p>
-        既存のSaaSや社内システムを整理し、<br>
-        「手作業→自動化」に置き換えられるポイントを設計します。
-      </p>
-      <ul class="bar-list">
-        <li class="bar"></li>
-        <li class="bar"></li>
-        <li class="bar short"></li>
-      </ul>
+      <!-- Before -->
+      <div class="diagram-col before">
+        <h3>Before（よくある状態）</h3>
+        <ul>
+          <li>業務が人に依存・属人化している</li>
+          <li>業務フローが見えず、部門ごとにバラバラ</li>
+          <li>情報がExcel・紙・メール・チャットに散在</li>
+          <li>ツールを入れたが定着していない</li>
+        </ul>
+      </div>
+
+      <div class="diagram-arrow">→</div>
+
+      <!-- After -->
+      <div class="diagram-col after">
+        <h3>After（支援後の状態）</h3>
+        <ol class="linear-flow">
+          <li>全体業務フローが一枚で可視化</li>
+          <li>標準業務プロセス・マニュアルが整備</li>
+          <li>ツール連携・自動化ポイントを設計</li>
+          <li>DXロードマップに沿った継続改善</li>
+        </ol>
+      </div>
+
     </div>
   </div>
-  <p class="note">
-    ※ 実際のツール・設計内容は御社の環境に合わせて個別にご提案します。
-  </p>
 </section>
 
-<section class="section">
-  <h2>サービス内容</h2>
-  <ul class="point-list">
-    <li>現状業務の棚卸し・ヒアリング（担当者インタビュー・ログ分析など）</li>
-    <li>業務フロー図の作成（AS-IS / TO-BEの整理）</li>
-    <li>標準業務プロセスの設計とマニュアル化</li>
-    <li>使用中ツールの棚卸しと、統合・廃止・入れ替えの検討</li>
-    <li>RPA・SaaS・ノーコードツール等を用いた自動化の設計</li>
-    <li>パイロット導入〜全社展開までのDXロードマップ策定</li>
-  </ul>
+<!-- ========================= -->
+<!-- ご支援の流れ（STEP） -->
+<!-- ========================= -->
+<section class="service-section">
+  <div class="container">
+    <h2 class="section-title">ご支援の流れ</h2>
+
+    <div class="steps">
+
+      <div class="step-card">
+        <h3>STEP 1<br>現状ヒアリング・課題整理</h3>
+        <p>経営層・現場の両方から状況を確認し、属人化や手戻りの原因を整理します。</p>
+      </div>
+
+      <div class="step-card">
+        <h3>STEP 2<br>業務可視化（AS-IS）</h3>
+        <p>現状の業務フロー・担当者マップ・ツール一覧を作成し、業務の流れを見える化します。</p>
+      </div>
+
+      <div class="step-card">
+        <h3>STEP 3<br>改善方針の設計（TO-BE）</h3>
+        <p>やめる業務・減らす業務・自動化する業務を整理し、理想の業務像を定義します。</p>
+      </div>
+
+      <div class="step-card">
+        <h3>STEP 4<br>優先プロジェクトの実行</h3>
+        <p>プロセス改善・ツール連携・自動化など、最も効果の高い領域から着手します。</p>
+      </div>
+
+      <div class="step-card">
+        <h3>STEP 5<br>定着・内製化支援</h3>
+        <p>運用ルールやマニュアルを整備し、継続的な改善が可能な体制づくりを支援します。</p>
+      </div>
+
+    </div>
+  </div>
 </section>
 
-<section class="section">
-  <h2>導入ステップ</h2>
-  <ol class="step-list">
-    <li><strong>現状ヒアリング</strong>：経営層・現場それぞれから課題を整理</li>
-    <li><strong>業務可視化</strong>：業務フロー図・担当者マップ・利用ツール一覧を作成</li>
-    <li><strong>改善方針の設計</strong>：やめる業務／減らす業務／自動化する業務を定義</li>
-    <li><strong>優先プロジェクトの実行</strong>：インパクトと実現性の高いテーマから着手</li>
-    <li><strong>定着・内製化支援</strong>：運用ルール整備と、社内推進メンバーの育成</li>
-  </ol>
+<!-- ========================= -->
+<!-- 提供サービス内容（4ブロック） -->
+<!-- ========================= -->
+<section class="service-section">
+  <div class="container">
+    <h2 class="section-title">EXPAND が提供すること</h2>
+
+    <div class="grid-cards">
+
+      <div class="service-card">
+        <h3>1. 全体業務フロー図の作成・可視化</h3>
+        <p>部門間の分断をなくし、業務全体を一枚で把握できる状態をつくります。</p>
+      </div>
+
+      <div class="service-card">
+        <h3>2. 標準業務プロセス設計とマニュアル化</h3>
+        <p>属人化を解消し、新人でも同じ品質で作業できる状態にします。</p>
+      </div>
+
+      <div class="service-card">
+        <h3>3. ツール棚卸し・連携設計・自動化</h3>
+        <p>既存ツールの統合・自動化ポイントを整理し、手作業を減らします。</p>
+      </div>
+
+      <div class="service-card">
+        <h3>4. DXロードマップ・推進体制の構築</h3>
+        <p>短期・中期改善の優先順位を整理し、継続的な改善ができる体制を作ります。</p>
+      </div>
+
+    </div>
+  </div>
 </section>
 
-<section class="section">
-  <h2>想定シーン・事例イメージ</h2>
-  <ul class="case-list">
-    <li>社員数30〜200名規模で、部門ごとに業務がサイロ化している企業</li>
-    <li>バックオフィスの紙・Excel業務を減らしたい管理部門</li>
-    <li>DX推進担当を任されたが、どこから手をつけるか悩んでいるご担当者</li>
-    <li>すでにツールは導入済みだが、思ったほど生産性が上がっていない企業</li>
-  </ul>
+<!-- ========================= -->
+<!-- CTA（無料相談） -->
+<!-- ========================= -->
+<section class="cta-section">
+  <div class="container">
+    <p class="cta-text">現在の業務フローやツールの使われ方について、お気軽にご相談ください。</p>
+    <a href="/contact" class="cta-button">無料相談を申し込む</a>
+  </div>
 </section>
 
-  <nav class="service-nav">
-  <a href="service-crm.html" class="active">営業支援・CRM / MA構築</a>
-  <a href="service-dx.html">業務設計・DX推進</a>
-  <a href="service-education.html">教育・人材育成プログラム</a>
-  <a href="service-web.html">Web制作・マーケティング支援</a>
-　</nav>
+<!-- ========================= -->
+<!-- サービス切替ナビ -->
+<!-- ========================= -->
+<section class="service-nav">
+  <div class="container">
+    <ul class="service-nav-list">
+      <li><a href="/service-crm.html">営業支援・CRM / MA構築</a></li>
+      <li class="active"><a href="/service-dx.html">業務設計・DX推進</a></li>
+      <li><a href="/service-education.html">教育・人材育成プログラム</a></li>
+      <li><a href="/service-web.html">Web制作・マーケティング支援</a></li>
+    </ul>
+  </div>
+</section>
   
   <section class="section section-cta">
   <h2>まずは現在の業務フローから一緒に整理してみませんか？</h2>
