--- a/service-dx.html
+++ b/service-dx.html
@@ -27,175 +27,167 @@
     </nav>
   </header>
 
-<!-- ========================= -->
-<!-- 業務設計・DX推進：ファーストビュー -->
-<!-- ========================= -->
-<section class="service-fv">
-  <div class="container">
-    <h1 class="service-title">業務設計・DX推進</h1>
-    <p class="service-lead">
-      業務が人に依存して属人化している。ツールを導入したのに現場で活用されていない。<br>
-      そんな状態から抜け出し、「しくみ」で回る業務とDX推進を支援します。
-    </p>
-  </div>
-</section>
+# 業務設計・DX推進
 
-<!-- ========================= -->
-<!-- 課題セクション -->
-<!-- ========================= -->
-<section class="service-section">
-  <div class="container">
-    <h2 class="section-title">こんな課題はありませんか？</h2>
-    <ul class="problem-list">
-      <li>業務フローが整理されておらず、人によってやり方がバラバラ</li>
-      <li>Excel・紙・チャットなど、情報があちこちに散らばっている</li>
-      <li>RPAやSaaSを導入したものの、現場で使いこなせていない</li>
-      <li>マニュアルが形骸化し、現場に定着していない</li>
-      <li>DX推進をしたいが、どこから着手すべきかわからない</li>
-    </ul>
-  </div>
-</section>
+日々の業務が人に依存していて属人化している。  
+ツールは入れたのに、現場でほとんど使われていない。  
+そんな状態から抜け出し、「しくみ」で回る業務とDX推進を支援します。
 
-<!-- ========================= -->
-<!-- Before / After 図解 -->
-<!-- ========================= -->
-<section class="diagram-before-after">
-  <div class="container">
-    <h2 class="section-title">導入前と導入後のイメージ</h2>
+## こんな課題はありませんか？
 
-    <div class="diagram-cols">
+  * 業務フローが整理されておらず、人によってやり方がバラバラ
+  * Excel・紙・チャットなど、情報があちこちに散らばっている
+  * RPAやSaaSを導入したものの、現場で使いこなせていない
+  * マニュアルはあるが、現場の実態と合っておらず形骸化している
+  * DX推進担当はいるが、どこから手をつけるべきか決めきれない
 
-      <!-- Before -->
-      <div class="diagram-col before">
-        <h3>Before（よくある状態）</h3>
-        <ul>
-          <li>業務が人に依存・属人化している</li>
-          <li>業務フローが見えず、部門ごとにバラバラ</li>
-          <li>情報がExcel・紙・メール・チャットに散在</li>
-          <li>ツールを入れたが定着していない</li>
-        </ul>
-      </div>
+## 導入前と導入後のイメージ
 
-      <div class="diagram-arrow">→</div>
+Before（業務設計・DX推進前のよくある状態）
 
-      <!-- After -->
-      <div class="diagram-col after">
-        <h3>After（支援後の状態）</h3>
-        <ol class="linear-flow">
-          <li>全体業務フローが一枚で可視化</li>
-          <li>標準業務プロセス・マニュアルが整備</li>
-          <li>ツール連携・自動化ポイントを設計</li>
-          <li>DXロードマップに沿った継続改善</li>
-        </ol>
-      </div>
+  * 業務が人に依存・属人化  
+  特定の担当者のやり方に依存しており、休職・退職・異動があると業務が止まってしまう。
 
-    </div>
-  </div>
-</section>
+  * 業務フローが見えない  
+  部門ごと・人ごとにやり方が異なり、「どこからどこまでが誰の仕事か」が整理されていない。
 
-<!-- ========================= -->
-<!-- ご支援の流れ（STEP） -->
-<!-- ========================= -->
-<section class="service-section">
-  <div class="container">
-    <h2 class="section-title">ご支援の流れ</h2>
+  * 情報がバラバラに散在  
+  Excel、紙の書類、メール、チャットなどに情報が分かれ、探すだけで時間がかかる。
 
-    <div class="steps">
+  * ツールを入れても定着しない  
+  業務フローの見直しがないままRPAやSaaSを導入し、「なんとなく使われていない」状態になっている。
 
-      <div class="step-card">
-        <h3>STEP 1<br>現状ヒアリング・課題整理</h3>
-        <p>経営層・現場の両方から状況を確認し、属人化や手戻りの原因を整理します。</p>
-      </div>
+After（EXPAND支援後のイメージ）
 
-      <div class="step-card">
-        <h3>STEP 2<br>業務可視化（AS-IS）</h3>
-        <p>現状の業務フロー・担当者マップ・ツール一覧を作成し、業務の流れを見える化します。</p>
-      </div>
+  * 全体業務フローが一枚で可視化  
+  部門をまたいだ業務の流れが一枚のフロー図に整理され、ボトルネックやムダな手戻りが分かるようになります。
 
-      <div class="step-card">
-        <h3>STEP 3<br>改善方針の設計（TO-BE）</h3>
-        <p>やめる業務・減らす業務・自動化する業務を整理し、理想の業務像を定義します。</p>
-      </div>
+  * 標準業務プロセスとマニュアルが整備  
+  担当者ごとの「暗黙知」を言語化し、誰が見ても同じ手順で進められる状態をつくります。
 
-      <div class="step-card">
-        <h3>STEP 4<br>優先プロジェクトの実行</h3>
-        <p>プロセス改善・ツール連携・自動化など、最も効果の高い領域から着手します。</p>
-      </div>
+  * ツール連携・自動化でムダを削減  
+  既存のSaaSや社内システムを整理し、「手作業→自動化」に置き換えられるポイントを設計します。
 
-      <div class="step-card">
-        <h3>STEP 5<br>定着・内製化支援</h3>
-        <p>運用ルールやマニュアルを整備し、継続的な改善が可能な体制づくりを支援します。</p>
-      </div>
+  * DX推進が“一度きり”ではなく仕組みになる  
+  優先度の高いテーマから改善し、定着・内製化まで見据えたDXロードマップで継続改善していける状態になります。
 
-    </div>
-  </div>
-</section>
+## ご支援の流れ
 
-<!-- ========================= -->
-<!-- 提供サービス内容（4ブロック） -->
-<!-- ========================= -->
-<section class="service-section">
-  <div class="container">
-    <h2 class="section-title">EXPAND が提供すること</h2>
+STEP 1
 
-    <div class="grid-cards">
+### 現状ヒアリング・課題整理
 
-      <div class="service-card">
-        <h3>1. 全体業務フロー図の作成・可視化</h3>
-        <p>部門間の分断をなくし、業務全体を一枚で把握できる状態をつくります。</p>
-      </div>
+経営層・現場それぞれからお話を伺い、  
+「どの業務にムダや手戻りがあるか」「どこが属人化しているか」を整理します。
 
-      <div class="service-card">
-        <h3>2. 標準業務プロセス設計とマニュアル化</h3>
-        <p>属人化を解消し、新人でも同じ品質で作業できる状態にします。</p>
-      </div>
+STEP 2
 
-      <div class="service-card">
-        <h3>3. ツール棚卸し・連携設計・自動化</h3>
-        <p>既存ツールの統合・自動化ポイントを整理し、手作業を減らします。</p>
-      </div>
+### 業務可視化（AS-IS整理）
 
-      <div class="service-card">
-        <h3>4. DXロードマップ・推進体制の構築</h3>
-        <p>短期・中期改善の優先順位を整理し、継続的な改善ができる体制を作ります。</p>
-      </div>
+現状の業務フロー図・担当者マップ・利用ツール一覧を作成し、  
+いま実際にどう動いているのかを可視化します。
 
-    </div>
-  </div>
-</section>
+STEP 3
 
-<!-- ========================= -->
-<!-- CTA（無料相談） -->
-<!-- ========================= -->
-<section class="cta-section">
-  <div class="container">
-    <p class="cta-text">現在の業務フローやツールの使われ方について、お気軽にご相談ください。</p>
-    <a href="/contact" class="cta-button">無料相談を申し込む</a>
-  </div>
-</section>
+### 改善方針の設計（TO-BE・DX方針）
 
-<!-- ========================= -->
-<!-- サービス切替ナビ -->
-<!-- ========================= -->
-<section class="service-nav">
-  <div class="container">
-    <ul class="service-nav-list">
-      <li><a href="/service-crm.html">営業支援・CRM / MA構築</a></li>
-      <li class="active"><a href="/service-dx.html">業務設計・DX推進</a></li>
-      <li><a href="/service-education.html">教育・人材育成プログラム</a></li>
-      <li><a href="/service-web.html">Web制作・マーケティング支援</a></li>
-    </ul>
-  </div>
-</section>
-  
-  <section class="section section-cta">
-  <h2>まずは現在の業務フローから一緒に整理してみませんか？</h2>
-  <p>
-    「何がムダで、どこから着手すればよいか」を一緒に見える化します。<br>
-    初回はオンラインでの無料相談から、お気軽にご相談ください。
-  </p>
-  <a href="contact.html" class="btn">無料相談を申し込む</a>
-</section>
+やめる業務／減らす業務／自動化する業務を定義し、  
+「どの状態を目指すのか（TO-BE）」を明確にします。
+
+STEP 4
+
+### 優先プロジェクトの実行
+
+インパクトと実現性の高いテーマから着手し、  
+業務プロセスの見直し・ツール連携・自動化などを具体的に進めます。
+
+STEP 5
+
+### 定着・内製化支援
+
+運用ルール・標準マニュアル・教育コンテンツを整備し、  
+現場で回り続ける状態と、社内推進メンバーの育成を支援します。
+
+## EXPAND が提供すること
+
+### 1. 全体業務フロー図の作成・可視化
+
+部門ごとに分断されていた業務を一枚のフロー図に整理し、  
+「誰が・どのタイミングで・何をしているのか」を見える化します。  
+これにより、ボトルネックやムダな手戻りを発見しやすくなります。
+
+### 2. 標準業務プロセス設計とマニュアル化
+
+担当者ごとのやり方に依存している業務を洗い出し、  
+ステップごとに標準化した業務プロセスを設計します。  
+あわせて、「誰が見ても分かる」マニュアル・チェックリストとしてドキュメント化します。
+
+### 3. ツール棚卸し・連携設計・自動化
+
+現在利用しているツール（RPA・SaaS・社内システムなど）を棚卸しし、  
+統合・廃止・入れ替えの方針を整理します。  
+「手作業で繰り返している処理」を自動化に置き換えられるポイントを設計し、  
+業務フローとツールが一つの流れでつながる状態を目指します。
+
+### 4. DXロードマップ・推進体制の構築
+
+パイロット導入から全社展開までのDXロードマップを策定し、  
+短期・中期の優先プロジェクトを整理します。  
+あわせて、社内のDX推進担当者やキーメンバーと連携し、  
+「自社で継続的に改善していける体制づくり」を支援します。
+
+## 業務設計・DX推進後のイメージ
+
+### 全体業務フロー図
+
+部門ごとに分断されていた業務を一枚のフロー図に整理。  
+ボトルネックやムダな手戻りが見えるようになります。
+
+  *   *   *
+
+### 標準業務マニュアル
+
+担当者ごとの「暗黙知」を言語化し、ステップごとに標準化。  
+誰が見ても同じ手順で進められる状態をつくります。
+
+  *   *   *
+
+### ツール連携・自動化
+
+既存のSaaSや社内システムを整理し、  
+「手作業→自動化」に置き換えられるポイントを設計します。
+
+  *   *   *
+
+※ 実際のツール・設計内容は御社の環境に合わせて個別にご提案します。  
+RPA・SaaS・社内システムなど、既存資産を活かしながら設計します。
+
+## 導入ステップ
+
+  1. 現状ヒアリング（課題・体制・ツール環境の把握）
+  2. 業務フロー図・担当者マップ・利用ツール一覧の作成
+  3. 改善方針・DXロードマップの策定
+  4. 優先プロジェクトの実行（プロセス改善・自動化・ツール連携）
+  5. 定着に向けた運用ルール・マニュアル・教育の整備
+  6. 振り返りと継続改善のサイクル構築
+
+## 導入後に期待できること
+
+  * 業務の全体像が見えるようになり、「どこにムダがあるか」が明確になる
+  * 属人化が解消され、担当者が変わっても業務が止まりにくくなる
+  * 手作業・二重入力が減り、現場の負荷を下げながら生産性が向上する
+  * 導入したツールが業務フローと結びつき、「入れただけ」で終わらなくなる
+  * DX推進が“一度きりのプロジェクト”ではなく、継続的な改善の仕組みになる
+
+【営業支援・CRM / MA構築】 【業務設計・DX推進】 【教育・人材育成プログラム】 【Web制作・マーケティング支援】
+
+## まずは現在の業務フローから一緒に整理してみませんか？
+
+「何がムダで、どこから着手すればよいか」を一緒に見える化します。  
+初回はオンラインでの無料相談から、お気軽にご相談ください。
+
+【無料相談を申し込む】
+
 
   
   <footer class="site-footer">
